              Technical notes on version 2.1

General:
01Jun07
kes  Fix a Bacula PostgreSQL bug dereferencing a NULL pointer      
     returned from a query.
kes  Make volume lock recursive.
kes  Implement an additional volume reservation algorithm that
     starts by considering all reserved volumes then uses the
     old brute force algorithm of searching the resources to
     find a suitable device.
kes  Add new reservations debug code and refine the old code.
kes  Update the win32/dll/bacula.defs file.
29May07
kes  Tweak reservations algorithm to permit a few more cases, i.e.
     volume reserved, but on different drive, ...
kes  Enhance SD status to include Pool and Media Type for drive in a
     more readable format (a bit longer). 
kes  Fix PostgreSQL double free.
28May07
kes  Minor refactoring of restore decryption code.
kes  Add code to smartall.c to detect double free of a buffer.
27May07
kes  Add < > around %r in from field on mail command of bacula-dir.conf.in
     so that bsmtp will create a correct email address (mailbox only).
kes  Modify 'memory' command so that the buffers are listed as 'In use'
     to avoid confusion with Orphaned buffers.
kes  I reworked the OpenSSL include/lib flags to be handled in     
     the standard Bacula way, which should fix bug #863 concerning
     non-standard OpenSSL libraries.
26May07
kes  Implement Help Browser window for bat.
kes  Fix reload bug that reset StorageId to zero.
25May07
kes  Fix TLS #ifdefing when TLS turned off.
kes  Ensure that when labelling a tape with Slot=0 that InChanger
     is not set.
kes  Use DISTINCT to make MySQL and PostgreSQL uar_list_temp query        
     the same.
kes  Add StartTime to final uar_sel_jobid_temp query so that we can
     add DISTINCT (required by PostgreSQL).
kes  Implement BSOCK authenticate_director() method. Eventually will
     authenicate all daemons.
kes  Move several more functions into the BSOCK class.
24May07